<resources>
    <string name="app_name">thaison3</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="s">-</string>
    <string name="a">+</string>
    <string name="d">/</string>
    <string name="f">.</string>
    <string name="enter">Enter</string>
    <string name="exit">Exit</string>
    <string name="multiply">Multiply</string>
    <string name="x_2">x^2</string>
    <string name="_0">0</string>
    <string name="division">Division</string>
    <string name="_9">9</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
</resources>